--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  margin: 10px;
+  background-color: var(--surface-b);
+  font-family: var(--font-family);
+}
+
+.text-layout {
+  color: var(--text-color);
+}
+
+.color-numbers {
+  color: rgb(0, 255, 0)
+}
+
+
+pre{
+  color: rgb(160, 160, 160);
+}
+
+
+.color-custom{
+  color: rgb(160, 160, 160);
+}
