--- a/src/app/ventas/pages/order/order.component.html
+++ b/src/app/ventas/pages/order/order.component.html
@@ -9,27 +9,51 @@
   <div class="p-toolbar-group-right">
     <button pButton type="button" label="toggle mayusculas" class="mr-1 p-button-danger"
       (click)="handleSetMayusculas()"></button>
-    <button pButton icon="pi pi-sort" label="Por nombre" class="mr-1 p-button-secondary"></button>
-    <button pButton icon="pi pi-sort" label="Valores" class="mr-1 p-button-info"></button>
-    <button pButton icon="pi pi-sort" label="Por color" class="mr-1 p-button-warning"></button>
+    <button pButton icon="pi pi-sort" label="Nombre" class="mr-1 p-button-secondary" (click)="handleChangeOrder('nombre')"></button>
+    <button pButton icon="pi pi-sort" label="Vuela" class="mr-1 p-button-info" (click)="handleChangeOrder('vuela')"></button>
+    <button pButton icon="pi pi-sort" label="Color" class="mr-1 p-button-warning" (click)="handleChangeOrder('color')"></button>
   </div>
 </p-toolbar>
 
 <div class="grid">
   <div class="col mt-2">
-    <p-table [value]="[]" responsiveLayout="scroll">
+    <p-table [value]="heroes | ordenar:orderBy" responsiveLayout="scroll">
       <ng-template pTemplate="header">
         <tr>
-          <th>Code</th>
-          <th>Name</th>
-          <th>Category</th>
+          <th>Nombre</th>
+          <th>Vuela</th>
+          <th>Color</th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-product>
+      <ng-template pTemplate="body" let-heroe>
         <tr>
-          <td>{{ product.code }}</td>
-          <td>{{ product.name }}</td>
-          <td>{{ product.category }}</td>
+          <td>{{ heroe.nombre }}</td>
+          <td>{{ heroe.vuela | vuela | titlecase }}</td>
+          <td>{{ heroe.color }}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
+
+{{ data | filter }}
+
+
+<div class="grid">
+  <div class="col mt-2">
+    <p-table [value]="heroes | slice:0" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="nombre">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+          <th pSortableColumn="vuela">Vuela <p-sortIcon field="vuela"></p-sortIcon></th>
+          <th pSortableColumn="color">Color <p-sortIcon field="color"></p-sortIcon></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroe>
+        <tr>
+          <td>{{ heroe.nombre }}</td>
+          <td>{{ heroe.vuela | vuela | titlecase }}</td>
+          <td>{{ heroe.color }}</td>
         </tr>
       </ng-template>
     </p-table>
